# sbom-signature-verifier

./: README.md  pyproject.toml
docs/plans/: 2026-02-16-sbom-signature-verifier.md
src/: cli.py  models.py  verifier.py
src/parsers/: cyclonedx.py  spdx.py
src/sbom_signature_verifier.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_cli.py  test_cyclonedx_parser.py  test_models.py  test_spdx_parser.py  test_verifier.py
