[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sbom-signature-verifier"
version = "0.1.0"
description = "Verify SBOM integrity and signatures"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "cryptography>=41.0.0",
]

[project.scripts]
sbom-verify = "src.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "ruff>=0.1.0", "pytest-cov"]

[tool.ruff]
line-length = 100
target-version = "py39"
